--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           echo $SSH_PRIVATE_KEY > server.pem
           chmod 400 server.pem
-          ssh -i server-server.pem ubuntu@ec2-98-84-97-86.compute-1.amazonaws.com
+          ssh -i server.pem ubuntu@ec2-98-84-97-86.compute-1.amazonaws.com
           touch test.txt
           exit
 
