--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: |
-          echo $SSH_PRIVATE_KEY > server.pem
+          printf "%s" "$SSH_PRIVATE_KEY" > server.pem
           chmod 400 server.pem
           cat server.pem
           ssh -o StrictHostKeyChecking=no -i server.pem ubuntu@ec2-98-84-97-86.compute-1.amazonaws.com
